{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 159,
  "lineage": "025f3d87-261c-d006-78c8-0f86fc9e145d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.16.242",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-01-07T23:20:03.633-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/harshthecode/regions/asia-south1/addresses/new-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "new-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "harshthecode",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/regions/asia-south1/addresses/new-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_sctp_to_node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "sctp"
              }
            ],
            "creation_timestamp": "2025-01-07T22:59:06.758-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/harshthecode/global/firewalls/allow-all-sctp-to-node-group",
            "log_config": [],
            "name": "allow-all-sctp-to-node-group",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "priority": 1000,
            "project": "harshthecode",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/firewalls/allow-all-sctp-to-node-group",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "no-external-ip"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_tcp_to_node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-07T22:59:06.790-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/harshthecode/global/firewalls/allow-all-tcp-to-node-group",
            "log_config": [],
            "name": "allow-all-tcp-to-node-group",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "priority": 1000,
            "project": "harshthecode",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/firewalls/allow-all-tcp-to-node-group",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "no-external-ip"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_udp_to_node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-01-07T22:59:06.566-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/harshthecode/global/firewalls/allow-all-udp-to-node-group",
            "log_config": [],
            "name": "allow-all-udp-to-node-group",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "priority": 1000,
            "project": "harshthecode",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/firewalls/allow-all-udp-to-node-group",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "no-external-ip"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-01-07T22:59:06.759-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/harshthecode/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "priority": 1000,
            "project": "harshthecode",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/firewalls/allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-07T22:59:06.375-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/harshthecode/global/firewalls/allow-http-server",
            "log_config": [],
            "name": "allow-http-server",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "priority": 1000,
            "project": "harshthecode",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/firewalls/allow-http-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-07T22:59:06.809-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/harshthecode/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "priority": 1000,
            "project": "harshthecode",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "confidential_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20241210",
                    "labels": {
                      "my_label": "value"
                    },
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/harshthecode/zones/asia-south1-a/disks/first-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-01-07T23:45:36.945-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/harshthecode/zones/asia-south1-a/instances/first-instance",
            "instance_id": "7900804356580283343",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\n\n# Log file for debugging\nLOG_FILE=\"/var/log/startup-script.log\"\necho \"Starting startup script...\" \u003e $LOG_FILE\n\n# Update and install necessary packages\napt-get update -y \u003e\u003e $LOG_FILE 2\u003e\u00261\napt-get upgrade -y \u003e\u003e $LOG_FILE 2\u003e\u00261\n\n# Install Docker (required by Kubernetes)\napt-get install -y apt-transport-https ca-certificates curl software-properties-common \u003e\u003e $LOG_FILE 2\u003e\u00261\nc [...]
            },
            "metadata_fingerprint": "WpppI-p33-I=",
            "name": "first-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.16.242",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
                "network_ip": "10.0.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/harshthecode/regions/asia-south1/subnetworks/subnetwork",
                "subnetwork_project": "harshthecode"
              }
            ],
            "project": "harshthecode",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/zones/asia-south1-a/instances/first-instance",
            "service_account": [
              {
                "email": "terraform-vm-sa@harshthecode.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/harshthecode/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8044331327410117826",
            "project": "harshthecode",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-07T22:59:07.749-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/harshthecode/regions/asia-south1/subnetworks/subnetwork",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/harshthecode/global/networks/vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "harshthecode",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.136.0.0/14",
                "range_name": "gke-htc-argo-pods-4723a7a8",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/harshthecode/locations/global/internalRanges/gke-htc-argo-pods-4723a7a8"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/harshthecode/regions/asia-south1/subnetworks/subnetwork",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7855194200488516820
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/nginx-service",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-service",
                "namespace": "default",
                "resource_version": "1961",
                "uid": "0aaa9a0e-d63c-41a1-ad1c-92a20f09cc5d"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "34.118.234.180",
                "cluster_ips": [
                  "34.118.234.180"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_container_cluster.htc_argo"
          ]
        }
      ]
    }
  ]
}